2016-07-18 Hanna Knutsson <hanna_k@fmgirl.com>

	* Only run a single instance of the application

2016-06-11 Hanna Knutsson <hanna_k@fmgirl.com>

	* Show actual number of days since last exchange rates update

2016-06-09 Hanna Knutsson <hanna_k@fmgirl.com>

	* Improve exchange rates handling
	* Exchange rates update interval in preferences
	* If fetch exchange rates on startup is set, then update exchange rates every day instead

2016-06-01 Hanna Knutsson <hanna_k@fmgirl.com>

	* Use html help instead

2016-05-28 Hanna Knutsson <hanna_k@fmgirl.com>

	* New "to" commands: factors and fraction

2016-05-27 Hanna Knutsson <hanna_k@fmgirl.com>

	* hex, oct, bin, bases, optimal, base "to" commands
	* Do not complete functions and variables in "to" expression

2016-05-25 Hanna Knutsson <hanna_k@fmgirl.com>

	* Set missing prefixes check box
	* Wait 0.5 s before showing fetching exchange rates message

2016-05-22 Hanna Knutsson <hanna_k@fmgirl.com>

	* Default for history (and conversion) height
	* Continuous conversion check box instead of convert button as toggle

2016-05-20 Hanna Knutsson <hanna_k@fmgirl.com>

	* New parsing modes	

2016-05-19 Hanna Knutsson <hanna_k@fmgirl.com>

	* Reenable and fix stack editing and stop expression entry from stealing focus when editing
	* Move convert unit dialog convert to tab in main window. Auto-select category and add toggle button for continuous conversion.
	* Enhanced window size handling

2016-05-17 Hanna Knutsson <hanna_k@fmgirl.com>
	
	* New print abort/timeout system

2016-05-16 Hanna Knutsson <hanna_k@fmgirl.com>

	* Add timeout for conversion in units dialog and in bases dialog

2016-05-15 Hanna Knutsson <hanna_k@fmgirl.com>

	* Attempt to make print thread cancellation less crash prone

2016-05-09 Hanna Knutsson <hanna_k@fmgirl.com>

	* Set optimal prefix menu item

2016-05-04 Hanna Knutsson <hanna_k@fmgirl.com>

	* Update exchange rates question dialog

2016-05-03 Hanna Knutsson <hanna_k@fmgirl.com>
	