@@ -1,5 +1,9 @@
 2016-07-18 Hanna Knutsson <hanna_k@fmgirl.com>
 
+	* Command line option start a new instance of the application
+
+2016-07-18 Hanna Knutsson <hanna_k@fmgirl.com>
+
 	* Only run a single instance of the application
 
 2016-06-11 Hanna Knutsson <hanna_k@fmgirl.com>
